objects/SBQQ__SubscriptionConsumptionRate__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__LowerBound__c</fullName>
        <inlineHelpText>The lowest quantity of usage for this consumption rate.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Price__c</fullName>
        <inlineHelpText>The price for usage that falls within this consumption rate&apos;s bounds.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <label>Pricing Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PerUnit</fullName>
                    <label>Per Unit</label>
                </value>
                <value>
                    <fullName>FlatFee</fullName>
                    <label>Flat Fee</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProcessingOrder__c</fullName>
        <inlineHelpText>The order for processing the usage rate across multiple rates. Consumption Rates are evaluated beginning with the lowest processing order.</inlineHelpText>
        <label>Processing Order</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionConsumptionSchedule__c</fullName>
        <inlineHelpText>This rate is a part of of this schedule.</inlineHelpText>
        <label>Subscription Consumption Schedule</label>
        <referenceTo>SBQQ__SubscriptionConsumptionSchedule__c</referenceTo>
        <relationshipLabel>Subscription Consumption Rates</relationshipLabel>
        <relationshipName>SubscriptionConsumptionRates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpperBound__c</fullName>
        <inlineHelpText>The highest quantity of usage for this consumption rate.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Subscription Consumption Rate</label>
    <nameField>
        <label>Subscription Consumption Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Consumption Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>